[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=45",
    "wheel",
    "pybind11>=2.8.0",
]

[project]
authors = [ { name = "Jonathan Feinberg", email = "jonathf@gmail.com" } ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["numpy", "pandas"]
description = "Vehicle routing open-source optimization machine (VROOM)"
license = "BSD-2-Clause"
maintainers = [ { name = "Jonathan Feinberg", email = "jonathf@gmail.com" } ]
name = "pyvroom"
readme = "README.rst"
requires-python = ">= 3.10"
version = "0.1.0"

[project.scripts]
vroom = "vroom:main"

[project.urls]
# Changelog = "https://github.com/VROOM-Project/pyvroom"
# Documentation = "https://readthedocs.org"
Homepage = "https://vroom-project.org"
Issues = "https://github.com/VROOM-Project/pyvroom/issues"
Repository = "https://github.com/VROOM-Project/pyvroom"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 105
exclude = '''
/(
    \..*
  | dist
  | wheelhouse
  | .*build
  | __pycache__
)/
'''

[tool.cibuildwheel]
test-command = 'python -c "import vroom"'
build = "cp3{10,11,12,13,14}-*"
skip = "*musllinux*"
archs = "native"
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_34_x86_64"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_34_aarch64"

[tool.cibuildwheel.linux]
before-all = """
dnf update -y
dnf module enable -y mariadb-devel
dnf install -y openssl-devel asio-devel
dnf install -y glpk-devel glpk-utils
"""
archs = ["x86_64", "aarch64"]

[[tool.cibuildwheel.overrides]]
select = "*musllinux*"
before-all = """
apk add asio-dev
apk add openssl-dev
apk add glpk
"""
[tool.cibuildwheel.macos]

before-all = """
brew install --ignore-dependencies asio
brew install glpk
"""


[tool.flake8]
# ignore some errors to play nicely with black
ignore = ["E203", "E266", "E501", "W503", "F403", "E722", "F405"]
per-file-ignores = ["__init__.py:F401"]
max-complexity = 15
max-line-length = 105
exclude = [".*", "__pycache__", "*build", "dist", "wheelhouse"]
