[metadata]
name = pyvroom
version = file: VERSION
description = Vehicle routing open-source optimization machine (VROOM)
long_description = file: README.rst
license = BSD 2-Clause License
author = Jonathan Feinberg
author_email = jonathf@gmail.com
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
  =src
install_requires =
  numpy
python_requires = >=3.7
zip_safe = False

[options.packages.find]
where = src

[build_ext]
inplace=1
