[metadata]
name = pyvroom
description = Vehicle routing open-source optimization machine (VROOM)
long_description = file: README.rst
license = BSD 2-Clause License
author = Jonathan Feinberg
author_email = jonathf@gmail.com
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
  =src
install_requires =
  numpy
python_requires = >=3.7
zip_safe = False

[options.packages.find]
where = src

[build_ext]
inplace=0

[flake8]
# ignore some errors to play nicely with black
ignore = E203,E266,E501,W503,F403,E722,F405
per-file-ignores = __init__.py:F401
max-complexity = 15
max-line-length = 105
exclude = .*,__pycache__,*build,dist,wheelhouse
